# taskapi

./: docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: config.py  main.py  models.py
app/routers/: tasks.py
tests/: test_tasks.py
