[project]
name = "taskapi-structure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
